--- a/notebook/initiation.ipynb
+++ b/notebook/initiation.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c51a299e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict, TypedDict\n",
+    "from typing import Dict, TypedDict , \n",
     "from langgraph.graph import StateGraph"
    ]
   },
@@ -25,7 +25,9 @@
    "id": "11e1da45",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# We now create an AgentState - shared data structure that keeps track of information as your application runs."
+   ]
   },
   {
    "cell_type": "code",
