--- a/notebook/initiation.ipynb
+++ b/notebook/initiation.ipynb
@@ -10,23 +10,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c51a299e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict, TypedDict , \n",
+    "from typing import Dict, TypedDict\n",
     "from langgraph.graph import StateGraph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "11e1da45",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We now create an AgentState - shared data structure that keeps track of information as your application runs."
+    "# We now create an AgentState - shared data structure that keeps track of information as your application runs.\n",
+    "\n",
+    "class AgentState(TypedDict):\n",
+    "    message : str\n",
+    "    \n",
+    "    \n",
+    "def greeting_node(state : AgentState) -> AgentState:\n",
+    "    \"\"\"Simple node that adds a greeting message to the state.\"\"\"\n",
+    "    \n",
+    "    state['message'] = \"Hey \" + state['message'] + \", how is your day going?\"\n",
+    "    \n",
+    "    return state"
    ]
   },
   {
