feat : create graph

--- a/notebook/initiation.ipynb
+++ b/notebook/initiation.ipynb
@@ -46,6 +46,26 @@
    "id": "17072d6b",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "graph = StateGraph(AgentState)\n",
+    "\n",
+    "graph.add_node(\"greeter\", greeting_node)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5159c57",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6ded1a1",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
