--- a/notebook/initiation.ipynb
+++ b/notebook/initiation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c51a299e",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "11e1da45",
    "metadata": {},
    "outputs": [],
@@ -42,31 +42,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "17072d6b",
    "metadata": {},
    "outputs": [],
    "source": [
     "graph = StateGraph(AgentState)\n",
     "\n",
-    "graph.add_node(\"greeter\", greeting_node)"
+    "graph.add_node(\"greeter\", greeting_node)\n",
+    "\n",
+    "graph.set_entry_point(\"greeter\")\n",
+    "graph.set_finish_point(\"greeter\")\n",
+    "\n",
+    "app = graph.compile()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c5159c57",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result = app.invoke({\"message\" : \"Ghost\"})"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b6ded1a1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hey Ghost, how is your day going?'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result[\"message\"]"
+   ]
   },
   {
    "cell_type": "code",
@@ -87,7 +107,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "langgraph-bootcamp",
    "language": "python",
    "name": "python3"
   },
