--- a/notebook/4_conditional_graph.ipynb
+++ b/notebook/4_conditional_graph.ipynb
@@ -53,7 +53,7 @@
     "    return state\n",
     "\n",
     "def decide_next_node(state : AgentState) -> AgentState:\n",
-    "    \"\"\" This node decides which node to run next \"\"\"\n",
+    "    \"\"\" This node decides which node to run next (the conditional node) \"\"\"\n",
     "    \n",
     "    if state[\"operation\"] == \"+\":\n",
     "        return \"addition_operation\"\n",
