--- a/notebook/4_conditional_graph.ipynb
+++ b/notebook/4_conditional_graph.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "100d49e7",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "35ea64bd",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "adde6adc",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "9b7121f4",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "b7068cfe",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "14b792cc",
    "metadata": {},
    "outputs": [
@@ -125,6 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'number1': 10, 'operation': '-', 'number2': 4, 'finalNumber': 6}\n",
       "{'number1': 10, 'operation': '-', 'number2': 4, 'finalNumber': 6}\n"
      ]
     }
