feat : random_node

--- a/notebook/5_looping_graph.ipynb
+++ b/notebook/5_looping_graph.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "34b5f936",
    "metadata": {},
    "outputs": [],
@@ -27,11 +27,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fd2cba47",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def greeting_node(state : AgentState) -> AgentState:\n",
+    "    \"\"\" Greeting Node which says hi to the person \"\"\"\n",
+    "    state[\"name\"] = f\"Hi there, {state[\"name\"]}\"\n",
+    "    state[\"counter\"] = 0\n",
+    "    \n",
+    "    return state\n",
+    "\n",
+    "def random_node(state : AgentState) -> AgentState:\n",
+    "    \"\"\" Random Node which picks a random number between 1 and 10 \"\"\"\n",
+    "    state[\"number\"].append(random.randint(1, 10))\n",
+    "    state[\"counter\"] += 1\n",
+    "    \n",
+    "    return state"
+   ]
   },
   {
    "cell_type": "code",
