feat should_Continue

--- a/notebook/5_looping_graph.ipynb
+++ b/notebook/5_looping_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "245c8f22",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "34b5f936",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "fd2cba47",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,18 @@
     "    state[\"number\"].append(random.randint(1, 10))\n",
     "    state[\"counter\"] += 1\n",
     "    \n",
-    "    return state"
+    "    return state\n",
+    "\n",
+    "def should_Continue(state : AgentState) -> AgentState:\n",
+    "    \"\"\" Should Continue Node which checks if the counter is less than 10 \"\"\"\n",
+    "    \n",
+    "    if state[\"counter\"] < 10:\n",
+    "        print(\"ENTERING LOOP\", state[\"counter\"])\n",
+    "        return \"loop\"\n",
+    "    else:\n",
+    "        return \"exit\"\n",
+    "    \n",
+    "    return state\n"
    ]
   },
   {
