--- a/notebook/5_looping_graph.ipynb
+++ b/notebook/5_looping_graph.ipynb
@@ -127,6 +127,52 @@
     "from IPython.display import Image , display\n",
     "display(Image(app.get_graph().draw_mermaid_png()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "928ede7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ENTERING LOOP 1\n",
+      "ENTERING LOOP 2\n",
+      "ENTERING LOOP 3\n",
+      "ENTERING LOOP 4\n",
+      "ENTERING LOOP 5\n",
+      "ENTERING LOOP 6\n",
+      "ENTERING LOOP 7\n",
+      "ENTERING LOOP 8\n",
+      "ENTERING LOOP 9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Hi there, GhosT',\n",
+       " 'number': [3, 5, 5, 6, 2, 10, 4, 8, 4, 4],\n",
+       " 'counter': 10}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "app.invoke({\"name\" : \"GhosT\", \"number\" : [], \"counter\" : -1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2be00a84",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
